--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,10 @@
-plugins {
-    id 'java'
-}
-
 group 'fi.kapsi.kosmik'
 version '0.1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+subprojects {
+    apply plugin: 'java'
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    repositories {
+        mavenCentral()
+    }
 }
