--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ dependencies {
 }
 
 jar {
-    archivesBaseName = 'midi-dump'
+    archivesBaseName = 'midi-dump-' + rootProject.version
     manifest { attributes 'Main-Class': 'fi.kapsi.kosmik.javamididecoder.app.MidiDump' }
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
